# term-greeter

./: README.md  pyproject.toml  term-greeter.py
